compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_dynamic_size_with_other_segments.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let n = 16\n  let m = 32\n  let assert <<first:size(8), a:size(n), b:size(m), rest:bits>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let n = 16
  let m = 32
  let assert <<first:size(8), a:size(n), b:size(m), rest:bits>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySlice, bitArraySliceToInt } from "../gleam.mjs";

function go(x) {
  let n = 16;
  let m = 32;
  if (x.bitSize < 8 || x.bitSize < 8 + n || x.bitSize < 8 + m + n) {
    throw makeError(
      "let_assert",
      "my/mod",
      5,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let first = x.byteAt(0);
  let a = bitArraySliceToInt(x, 8, 8 + n, true, false);
  let b = bitArraySliceToInt(x, 8 + n, 8 + n + m, true, false);
  let rest = bitArraySlice(x, 8 + m + n);
  return x;
}
