compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_literal_unaligned_float.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let n = 1\n  let assert <<_:size(n), 1.1, _:bits>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let n = 1
  let assert <<_:size(n), 1.1, _:bits>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToFloat } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

function go(x) {
  let n = 1;
  if (
    n < 0 ||
    x.bitSize < 64 + n ||
    bitArraySliceToFloat(x, n, n + 64, true) !== 1.1
  ) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      4,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 26, end: 67, pattern_start: 37, pattern_end: 63 }
    )
  }
  return x;
}
