compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_non_byte_aligned_size_error.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<a:size(7)>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert <<a:size(7)>> = x
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/javascript/error.gleam:3:16
  │
3 │   let assert <<a:size(7)>> = x
  │                ^^^^^^^^^

Non byte aligned integer in patterns is not supported for JavaScript compilation.
