compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_rest_bits.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<_, b:bits>> = <<1,2,3>>\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert <<_, b:bits>> = <<1,2,3>>
}


----- COMPILED JAVASCRIPT
import { makeError, toBitArray, bitArraySlice } from "../gleam.mjs";

function go(x) {
  let $ = toBitArray([1, 2, 3]);
  if ($.bitSize < 8) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: $ }
    )
  }
  let b = bitArraySlice($, 8);
  return $;
}
