compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_sized_little_endian_unsigned.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<a:16-little-unsigned>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert <<a:16-little-unsigned>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

function go(x) {
  if (!(x.length == 2)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let a = x.intFromSlice(0, 2, false, false);
  return x;
}
